--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -127,12 +127,18 @@ http://www.templatemo.com/tm-515-eatery
   .about-image img,
   .team-thumb img {
     width: 100%;
+    overflow: hidden;
   }
   
   #google-map iframe {
     border: 0;
     width: 100%;
     height: 390px;
+  }
+
+  .about-span{
+    font-weight: 700;
+    color: rgba(0, 0, 0, .8);
   }
 
 
@@ -217,7 +223,25 @@ http://www.templatemo.com/tm-515-eatery
   .custom-navbar .navbar-brand {
     color: #ffffff;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: boldù
+  }
+
+  .navbar-brand{
+    width: 200px !important;
+    height: 60px !important;
+  }
+
+  .logo{
+    background: url("../images/logocaffe.png") no-repeat; 
+    background-position: center;
+    background-size: cover;
+    width: 100%; 
+    height: 100%; 
+    display: block; 
+    padding: 20px;
+    text-indent: -9999px;
+    margin-left: 20px;
+    border-radius: 10px;
   }
 
   .custom-navbar .navbar-brand span {
@@ -403,15 +427,15 @@ http://www.templatemo.com/tm-515-eatery
   }
 
   .slider .item-first {
-    background-image: url(../images/slider-image1.jpg);
+    background-image: url(../images/slide1.jpg);
   }
 
   .slider .item-second {
-    background-image: url(../images/slider-image2.jpg);
+    background-image: url(../images/slider-image3.jpg);
   }
 
   .slider .item-third {
-    background-image: url(../images/slider-image3.jpg);
+    background-image: url(../images/slide3.jpg);
   }
 
   .slider .item-second .section-btn {
@@ -642,7 +666,7 @@ http://www.templatemo.com/tm-515-eatery
   -----------------------------------------*/
 
   #testimonial {
-    background: url('../images/testimonial-bg.jpg') center center no-repeat;
+    background: url('../images/slider-bottom3.jpg') center center no-repeat;
     background-size: cover;
   }
 
@@ -740,6 +764,12 @@ http://www.templatemo.com/tm-515-eatery
     background: #292929;
     color: #ffffff;
   }
+
+
+.advertising{
+  color: rgba(255, 0, 0, .9) !important;
+  font-weight: 700 !important;
+}
 
 
 
